--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -15,7 +15,9 @@
                 <li><a href="/contact" onclick="route()">Contact</a></li>
             </ul>
         </nav>
-        <script src="router.js"></script>
+        <script src="router.js">
+            // console.log('salam ana amine');
+        </script>
     </div>
 </body>
 </html>
