--- a/frontend/profile/profile.html
+++ b/frontend/profile/profile.html
@@ -5,14 +5,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Profile</title>
 	<link rel="stylesheet" href="style.css">
+	<link re="canonical" href="">
+
 </head>
 <body>
+	<header>Ping Pong</header>
 	<div class="container">
-		<div id="level"> level </div>
-		<div id="profile"> obouhrir </div>
-		<div id="matches"> matches </div>
+	<!-- <iframe src="https://www.google.com/maps"  height="200" width="300" title="Iframe Example"></iframe> -->
+		<div class="level" 	id="level"> 
+			<p>HIGHEST PRICE</p>
+			<img src="https://via.placeholder.com/150" alt="profile picture">
+			<p>SILVER</p>
+		</div>
+		<div class="profile" id="profile"> obouhrir </div>
+		<div class="matches" id="matches"> matches </div>
 	</div>
-
-		<script src="profile.js" class="level"></script>
+	<script src="profile.js"></script>
 </body>
 </html>
