--- a/frontend/profile/profile.html
+++ b/frontend/profile/profile.html
@@ -7,19 +7,29 @@
 	<link rel="stylesheet" href="style.css">
 	<link re="canonical" href="">
 
+
 </head>
 <body>
-	<header>Ping Pong</header>
+	<header>
+		<img src="./logo.svg">
+		<nav class="head">
+			<a href="index.html">dashboard</a>
+			<a href="profile.html">messanger</a>
+			<a href="matches.html">game</a>
+			<a href="matches.html">settings</a>
+		</nav>
+	</header>
 	<div class="container">
 	<!-- <iframe src="https://www.google.com/maps"  height="200" width="300" title="Iframe Example"></iframe> -->
 		<div class="level" 	id="level"> 
 			<p>HIGHEST PRICE</p>
-			<img src="https://via.placeholder.com/150" alt="profile picture">
+			<img src="gris.svg" alt="profile picture">
 			<p>SILVER</p>
 		</div>
 		<div class="profile" id="profile"> obouhrir </div>
 		<div class="matches" id="matches"> matches </div>
 	</div>
+	<div class ="last">hello</div>
 	<script src="profile.js"></script>
 </body>
 </html>
