--- a/frontend/profile/profile.html
+++ b/frontend/profile/profile.html
@@ -18,10 +18,10 @@
 			<a href="#" onclick="navigateTo('game')">game</a>
 			<a href="#" onclick="navigateTo('settings')">settings</a>
 		</nav>
-		<div class="profile-icon">
-			<img src="profile.svg" alt="profile picture">
-		</div>
 	</header>
+	<!-- <div class="profile-icon">
+		<img src="profile.svg" alt="profile picture">
+	</div> -->
 	<div class="container">
 	<!-- <iframe src="https://www.google.com/maps"  height="200" width="300" title="Iframe Example"></iframe> -->
 		<div class="level" 	id="level"> 
