--- a/frontend/profile/profile.html
+++ b/frontend/profile/profile.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<header>
-		<img src="./logo.svg">
+		<img class="logo" src="./logo.svg" href="#" onclick="navigateTo('profile')">
 		<nav class="head">
 			<a href="#" onclick="navigateTo('dashboard')">dashboard</a>
 			<a href="#" onclick="navigateTo('messenger')">messenger</a>
@@ -24,13 +24,9 @@
 	</div> -->
 	<div class="container">
 	<!-- <iframe src="https://www.google.com/maps"  height="200" width="300" title="Iframe Example"></iframe> -->
-		<div class="level" 	id="level"> 
-			<p>HIGHEST PRICE</p>
-			<img src="gris.svg" alt="profile picture">
-			<p>SILVER</p>
-		</div>
-		<div class="profile" id="profile"> obouhrir </div>
-		<div class="matches" id="matches"> matches </div>
+	<div class="stats" id="stats">
+		stats
+	</div>
 	</div>
 	<script src="profile.js"></script>
 </body>
