--- a/frontend/profile/profile.html
+++ b/frontend/profile/profile.html
@@ -10,8 +10,11 @@
 
 </head>
 <body>
+	<!-- <div class="profile-icon">
+		<img src="profile.svg" alt="profile picture">
+	</div> -->
 	<header>
-		<img class="logo" src="./logo.svg" href="#" onclick="navigateTo('profile')">
+		<img class="logo" href="#" onclick="navigateTo('profile')" src="./logo.svg">
 		<nav class="head">
 			<a href="#" onclick="navigateTo('dashboard')">dashboard</a>
 			<a href="#" onclick="navigateTo('messenger')">messenger</a>
@@ -19,14 +22,12 @@
 			<a href="#" onclick="navigateTo('settings')">settings</a>
 		</nav>
 	</header>
-	<!-- <div class="profile-icon">
-		<img src="profile.svg" alt="profile picture">
-	</div> -->
 	<div class="container">
-	<!-- <iframe src="https://www.google.com/maps"  height="200" width="300" title="Iframe Example"></iframe> -->
-	<div class="stats" id="stats">
-		stats
 	</div>
+	<!-- <iframe src="https://www.google.com/maps"  height="200" width="300" title="Iframe Example"></iframe> -->
+	<!-- <div class="stats" id="stats">
+		stats
+	</div> -->
 	</div>
 	<script src="profile.js"></script>
 </body>
