--- a/frontend/game/game.html
+++ b/frontend/game/game.html
@@ -10,11 +10,17 @@
 <body>
     <div class="ping-pong">
         <h1>PING PONG</h1>
+        <div class="player" id="player1">
+            <img src="miroka.svg" class="img-player">0
+        </div>
         <div class="subping">
             <canvas id="table"></canvas>
             <div id="paddle1" class="paddle"></div>
             <div id="paddle2" class="paddle"></div>
             <div id="ball"></div>
+        </div>
+        <div class="player" id="player2">
+            <img src="droke.svg" class="img-player">0
         </div>
         <p>Press space to start</p>
     </div>
