--- a/frontend/game/game.html
+++ b/frontend/game/game.html
@@ -5,22 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./paddle.svg">
     <link rel="stylesheet" href="./game.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <title>ping pong</title>
 </head>
 <body>
-    <div class="ping-pong">
-        <h1>PING PONG</h1>
-        <div class="player" id="player1">
-            <img src="miroka.svg" class="img-player">0
-        </div>
+	<div class="ping-pong">
+		<h1>PING PONG</h1>
+		<div id="countdown"></div>
+		<div class="scoreboard">
+			<div class="player-profile" id="player1-profile">
+				<img src="miroka.svg" alt="Player 1" class="profile-pic">
+				<p class="player-name">miroka</p>
+			</div>
+			<div class="score-display">
+				<span id="score1">0</span> : <span id="score2">0</span>
+			</div>
+			<div class="player-profile" id="player2-profile">
+				<img src="droke.svg" alt="Player 2" class="profile-pic">
+				<p class="player-name">droke</p>
+			</div>
+		</div>
         <div class="subping">
             <canvas id="table"></canvas>
             <div id="paddle1" class="paddle"></div>
             <div id="paddle2" class="paddle"></div>
             <div id="ball"></div>
-        </div>
-        <div class="player" id="player2">
-            <img src="droke.svg" class="img-player">0
         </div>
         <p>Press space to start</p>
     </div>
