--- a/frontend/game/game.html
+++ b/frontend/game/game.html
@@ -33,7 +33,7 @@
             <div id="paddle2" class="paddle"></div>
             <div id="ball"></div>
         </div>
-        <p>Press space to start</p>
+        <p style="font-size:30px">Press space to start</p>
     </div>
     <script src="./game.js"></script>
 </body>
