--- a/frontend/profile/profile.html
+++ b/frontend/profile/profile.html
@@ -3,23 +3,26 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Profile</title>
+	<!-- <title>Profile</title> -->
+	<link rel="icon" href="../game/paddle.svg">
 	<link rel="stylesheet" href="style.css">
-	<link re="canonical" href="">
-
-
+    <link rel="stylesheet" href="../game/game.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+    <title>ping pong</title>
 </head>
 <body>
 	<!-- <div class="profile-icon">
 		<img src="profile.svg" alt="profile picture">
 	</div> -->
 	<header>
-		<img class="logo" href="#" onclick="navigateTo('profile')" src="./logo.svg">
+		<img class="logo"  onclick="navigateTo('profile')" src="./logo.svg">
 		<nav class="head">
-			<a href="#" onclick="navigateTo('dashboard')">dashboard</a>
-			<a href="#" onclick="navigateTo('messenger')">messenger</a>
-			<a href="#" onclick="navigateTo('game')">game</a>
-			<a href="#" onclick="navigateTo('settings')">settings</a>
+			<a onclick="navigateTo('dashboard')">dashboard</a>
+			<a onclick="navigateTo('messenger')">messenger</a>
+			<a onclick="navigateTo('game')">game</a>
+			<a onclick="navigateTo('settings')">settings</a>
 		</nav>
 	</header>
 	<div class="container">
