--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ping Pong</title>
-    <link rel="stylesheet" href="./style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- <title>Profile</title> -->
+	<link rel="icon" href="../game/paddle.svg">
+	<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../game/game.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+    <title>ping pong</title>
 </head>
 <body>
-    <div id="router">
-        <nav id="main-nav" class="sidebar">
-            <ul>
-                <li><a href="/" onclick="route()">Home</a></li>
-                <li><a href="/profile" onclick="route()">Profile</a></li>
-                <li><a href="/contact" onclick="route()">Contact</a></li>
-            </ul>
-        </nav>
-        <script src="router.js">
-            // console.log('salam ana amine');
-        </script>
-    </div>
+	<!-- <div class="profile-icon">
+		<img src="profile.svg" alt="profile picture">
+	</div> -->
+	<header>
+		<nav class="head">
+			<img class="logo"  onclick="navigateTo('profile')" src="./logo.svg">
+			<a onclick="navigateTo('dashboard')">dashboard</a>
+			<a onclick="navigateTo('messenger')">messenger</a>
+			<a onclick="navigateTo('game')">game</a>
+			<a onclick="navigateTo('settings')">settings</a>
+		</nav>
+	</header>
+	<div class="container"></div>
+	<!-- <iframe src="https://www.google.com/maps"  height="200" width="300" title="Iframe Example"></iframe> -->
+	<!-- <div class="stats" id="stats">
+		stats
+	</div> -->
+	<script src="index.js"></script>
 </body>
 </html>
