--- a/frontend/profile/profile.html
+++ b/frontend/profile/profile.html
@@ -1,37 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <title>Profile</title> -->
-	<link rel="icon" href="../game/paddle.svg">
-	<link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../game/game.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
-    <title>ping pong</title>
-</head>
-<body>
-	<!-- <div class="profile-icon">
-		<img src="profile.svg" alt="profile picture">
-	</div> -->
-	<header>
-		<img class="logo"  onclick="navigateTo('profile')" src="./logo.svg">
-		<nav class="head">
-			<a onclick="navigateTo('dashboard')">dashboard</a>
-			<a onclick="navigateTo('messenger')">messenger</a>
-			<a onclick="navigateTo('game')">game</a>
-			<a onclick="navigateTo('settings')">settings</a>
-		</nav>
-	</header>
-	<div class="container">
+<div class="level" 	id="level"> 
+	<p>HIGHEST PRICE</p>
+	<img src="gris.svg" alt="profile picture" width=50>
+	<p>SILVER</p>
+</div>
+<div class="profile" id="profile">
+	<img class="profile-img" src="profile.svg" alt="profile picture">
+	<p>OUSSAMA BOUHRIR</p>
+	<p class="online-status" style="font-size:20px;font-family:monospace;">OBOUHRIR</p>
+	<p class="level-status" style="font-size:20px;font-family:monospace;"> LV 9</p>
+</div>
+<div class="matches" id="matches">
+<div class="txt">
+		<p>MATCHES</p>
+		<p style="font-family:monospace;">W \\ L</p>
+		<p style="font-family:monospace;">10 - 3</p>
 	</div>
-	<!-- <iframe src="https://www.google.com/maps"  height="200" width="300" title="Iframe Example"></iframe> -->
-	<!-- <div class="stats" id="stats">
-		stats
-	</div> -->
-	</div>
-	<script src="profile.js"></script>
-</body>
-</html>
+</div>
+</div>
