--- a/frontend/front/game/game.html
+++ b/frontend/front/game/game.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./paddle.svg">
-    <link rel="stylesheet" href="./game.css">
+    <link rel="icon" href="../svg/paddle.svg">
+    <link rel="stylesheet" href="../style/game.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
@@ -34,6 +34,6 @@
     </div>
     <p style="font-size:30px">Press space to start</p>
 </div>
-    <script src="./game.js"></script>
+    <script src="../js/game.js"></script>
 </body>
 </html>
