--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -6,7 +6,7 @@
 	<!-- <title>Profile</title> -->
 	<link rel="icon" href="../svg/paddle.svg">
 	<link rel="stylesheet" href="../style/start.css">
-    <link rel="stylesheet" href="../style/game.css">
+    <!-- <link rel="stylesheet" href="../style/game.css"> -->
     <link rel="stylesheet" href="../style/signup.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,6 +43,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 	<script src="../js/index.js"></script>
-	<script src="../js/game.js"></script>
+	<!-- <script src="../js/game.js"></script> -->
 </body>
 </html>
