--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -39,7 +39,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 	<!--------------->
 	<!-- <script src="../js/index.js"></script> -->
-	<script src="../js/signup.js"></script>
+	<!-- <script src="../js/signup.js"></script> -->
 	<script src="../js/signin.js"></script>
 	<!-- <script src="../js/game.js"></script> -->
 </body>
