--- a/frontend/front/start/game.html
+++ b/frontend/front/start/game.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../svg/paddle.svg">
+	
     <link rel="stylesheet" href="../style/game.css">
+    <link rel="stylesheet" href="../style/start.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <title>ping pong</title>
 </head>
 <body>
-<div class="ping-pong">
+	<div class="ping-pong">
+	<!-- <video autoplay loop muted id="bg-video">
+		<source src="../svg/background.mp4" type="video/mp4">
+	</video> -->
 	<h1>PING PONG</h1>
 	<div class="scoreboard">
 		<div class="player-profile" id="player1-profile">
