--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -6,16 +6,18 @@
 	<link rel="icon" href="../svg/paddle.svg">
 
 	<!-- style css -->
-	<link rel="stylesheet" href="../style/start.css">
+	<link rel="stylesheet" href="../style/index.css">
     <link rel="stylesheet" href="../style/game.css">
     <link rel="stylesheet" href="../style/signup.css">
     <link rel="stylesheet" href="../style/signin.css">
 	<!--------------->
 
+	<!-- font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
-
+	<!--------------->
+	
 	<!-- bootstrap -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
@@ -24,23 +26,38 @@
     <title>ping pong</title>
 </head>
 <body>
-	<!-- <header>
-		<nav class="head">
-			<img class="logo" src="./logo.svg">
-			<a href="#" >dashboard</a>
-			<a href="#" >messenger</a>
-			<a href="#" >game</a>
-			<a href="#" >settings</a>
-		</nav>
-	</header> -->
-	<div class="container"></div>
+	<!-- <video autoplay loop muted id="bg-video">
+		<source src="../svg/bg.mp4" type="video/mp4">
+	</video> -->
+	<navbar-compoent id="navbar"></navbar-component>
+	<div id="container"></div>
+
+
+	<script src="../js/index.js" defer></script>
+    <!-- Import web components -->
+    <script src="../js/components/navbar.js" defer></script>
+    <script src="../js/components/signin.js" defer></script>
+    <script src="../js/components/signup.js" defer></script>
+    <script src="../js/components/dashboard.js" defer></script>
+    <!-- <script src="./js/components/game.js" defer></script> -->
+    <!-- <script src="./js/components/settings.js" defer></script> -->
+    <!-- <script src="./js/components/profile.js" defer></script> -->
+
+
+
+
+
+
+
+
+
+
+
+
 	<!-- bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 	<!--------------->
-	<!-- <script src="../js/index.js"></script> -->
-	<!-- <script src="../js/signup.js"></script> -->
-	<script src="../js/signin.js"></script>
-	<!-- <script src="../js/game.js"></script> -->
+
 </body>
 </html>
