--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -25,6 +25,13 @@
 	<!--------------->
 	
     <title>ping pong</title>
+<!--oussama game-->
+<style>
+	canvas {
+		border: 1px solid white;
+	}
+</style>
+<!--------->
 </head>
 <body>
 	<!-- <video autoplay loop muted id="bg-video">
