--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -39,6 +39,7 @@
 	</video> -->
 	<!-- <navbar-compoent id="navbar"></navbar-component> -->
 	<div id="container"></div>
+	<!-- <signin-component></signin-component> -->
 
 
 	<script src="../js/index.js" defer></script>
