--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -51,6 +51,7 @@
     <script src="../js/components/chat.js" defer></script>
     <script src="../js/components/settings.js" defer></script>
     <script src="../js/components/game.js" defer></script>
+    <script src="../js/components/gameonline.js" defer></script>
     <!-- <script src="./js/components/settings.js" defer></script> -->
     <!-- <script src="./js/components/profile.js" defer></script> -->
 
