--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -6,12 +6,13 @@
 	<link rel="icon" href="../svg/paddle.svg">
 
 	<!-- style css -->
-	<link rel="stylesheet" href="../style/index.css">
-    <link rel="stylesheet" href="../style/game.css">
+	<!-- <link rel="stylesheet" href="../style/index.css"> -->
+	<link rel="stylesheet" href="../style/trans.css">
+    <!-- <link rel="stylesheet" href="../style/game.css">
     <link rel="stylesheet" href="../style/signup.css">
     <link rel="stylesheet" href="../style/signin.css">
 	<link rel="stylesheet" href="../style/settings.css">
-	<!--------------->
+	----------- -->
 
 	<!-- font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
