--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="../style/trans.css">
     <link rel="stylesheet" href="../style/game.css">
     <!-- <link rel="stylesheet" href="../style/signup.css"> -->
-	<link rel="stylesheet" href="../style/settings.css">
+	<!-- <link rel="stylesheet" href="../style/settings.css"> -->
 
 	<!-- font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,6 +53,8 @@
     <script src="../js/components/settings.js" defer></script>
     <script src="../js/components/game.js" defer></script>
     <script src="../js/components/gameonline.js" defer></script>
+    <script src="../js/components/gamebar.js" defer></script>
+
     <!-- <script src="./js/components/settings.js" defer></script> -->
     <!-- <script src="./js/components/profile.js" defer></script> -->
 
