--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="../style/trans.css">
     <link rel="stylesheet" href="../style/game.css">
     <!-- <link rel="stylesheet" href="../style/signup.css"> -->
-	<!-- <link rel="stylesheet" href="../style/settings.css"> -->
+	<link rel="stylesheet" href="../style/settings.css">
 
 	<!-- font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,8 +20,8 @@
 	<!--------------->
 	
 	<!-- bootstrap -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"> -->
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"> -->
 	<!--------------->
 	
     <title>ping pong</title>
@@ -54,6 +54,7 @@
     <script src="../js/components/game.js" defer></script>
     <script src="../js/components/gameonline.js" defer></script>
     <script src="../js/components/gamebar.js" defer></script>
+    <script src="../js/components/tournament.js" defer></script>
 
     <!-- <script src="./js/components/settings.js" defer></script> -->
     <!-- <script src="./js/components/profile.js" defer></script> -->
