--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../style/game.css">
     <!-- <link rel="stylesheet" href="../style/signup.css"> -->
 	<link rel="stylesheet" href="../style/settings.css">
+	<link rel="stylesheet" href="../style/chat.css">
+
 
 	<!-- font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
