start in dashboard

--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -55,6 +55,7 @@
     <script src="../js/components/gameonline.js" defer></script>
     <script src="../js/components/gamebar.js" defer></script>
     <script src="../js/components/tournament.js" defer></script>
+    <script src="../js/components/profile.js" defer></script>
 
     <!-- <script src="./js/components/settings.js" defer></script> -->
     <!-- <script src="./js/components/profile.js" defer></script> -->
