--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -6,11 +6,9 @@
 	<link rel="icon" href="../svg/paddle.svg">
 
 	<!-- style css -->
-	<!-- <link rel="stylesheet" href="../style/index.css"> -->
-    <!-- <link rel="stylesheet" href="../style/signin.css"> -->
 	<link rel="stylesheet" href="../style/trans.css">
     <link rel="stylesheet" href="../style/game.css">
-    <!-- <link rel="stylesheet" href="../style/signup.css"> -->
+	<link rel="stylesheet" href="../style/online.css">
 	<link rel="stylesheet" href="../style/settings.css">
 
 	<!-- font -->
