fix some bugs in jwt

--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -46,9 +46,9 @@
     <script src="../js/components/navbar.js" defer></script>
     <script src="../js/components/signin.js" defer></script>
     <script src="../js/components/signup.js" defer></script>
-    <script src="../js/components/dashboard.js" defer></script>
-    <script src="../js/components/chat.js" defer></script>
-    <script src="../js/components/settings.js" defer></script>
+    <script type="module" src="../js/components/dashboard.js" defer></script>
+    <script type="module" src="../js/components/chat.js" defer></script>
+    <script type="module" src="../js/components/settings.js" defer></script>
     <script src="../js/components/game.js" defer></script>
     <script src="../js/components/gameonline.js" defer></script>
     <script src="../js/components/gamebar.js" defer></script>
