--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -41,9 +41,9 @@
 	<!-- <signin-component></signin-component> -->
 
 
-	<script src="../js/index.js" defer></script>
+	<script type="module" src="../js/index.js" defer></script>
     <!-- Import web components -->
-    <script src="../js/components/navbar.js" defer></script>
+    <script type="module" src="../js/components/navbar.js" defer></script>
     <script src="../js/components/signin.js" defer></script>
     <script src="../js/components/signup.js" defer></script>
     <script type="module" src="../js/components/dashboard.js" defer></script>
@@ -53,7 +53,7 @@
     <script src="../js/components/gameonline.js" defer></script>
     <script src="../js/components/gamebar.js" defer></script>
     <script src="../js/components/tournament.js" defer></script>
-    <script src="../js/components/profile.js" defer></script>
+    <script type="module" src="../js/components/profile.js" defer></script>
 
     <!-- <script src="./js/components/settings.js" defer></script> -->
     <!-- <script src="./js/components/profile.js" defer></script> -->
