--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -44,7 +44,7 @@
 	<script type="module" src="../js/index.js" defer></script>
     <!-- Import web components -->
     <script type="module" src="../js/components/navbar.js" defer></script>
-    <script src="../js/components/signin.js" defer></script>
+    <script type="module" src="../js/components/signin.js" defer></script>
     <script src="../js/components/signup.js" defer></script>
     <script type="module" src="../js/components/dashboard.js" defer></script>
     <script type="module" src="../js/components/chat.js" defer></script>
