--- a/frontend/front/start/index.html
+++ b/frontend/front/start/index.html
@@ -49,10 +49,10 @@
     <script type="module" src="../js/components/dashboard.js" defer></script>
     <script type="module" src="../js/components/chat.js" defer></script>
     <script type="module" src="../js/components/settings.js" defer></script>
-    <script src="../js/components/game.js" defer></script>
-    <script src="../js/components/gameonline.js" defer></script>
-    <script src="../js/components/gamebar.js" defer></script>
-    <script src="../js/components/tournament.js" defer></script>
+    <script type="module" src="../js/components/game.js" defer></script>
+    <script type="module" src="../js/components/gameonline.js" defer></script>
+    <script type="module" src="../js/components/gamebar.js" defer></script>
+    <script type="module" src="../js/components/tournament.js" defer></script>
     <script type="module" src="../js/components/profile.js" defer></script>
 
     <!-- <script src="./js/components/settings.js" defer></script> -->
